examples/bad/type5.swifty
func foo(n:&int) {
   n = 10
}

print foo(5) //error - foo expects a reference to int
